# HomeApplianceRepair

./: .directory  .gitignore  CMakeLists.txt  Quick Repair项目文档.docx  Quick Repair项目文档.odt  QuickRepair赵亚伟.pptx  README.md  main.cpp  server.pro  建模.vpp  操作说明.docx  新建 Microsoft Word 文档.docx  用况.docx  答辩余诗雨.pptx  答辩高健.pptx
HomeApplican/: Home.qml  HomePage.qml  News.qml  Person.qml  Register.qml  main.qml  qml.qrc
HomeApplican/base/: BaseLabel.qml  ClickBox.qml  Icon.qml  InputBox.qml  MessageBox.qml  OrderBar.qml  OrderBox.qml  OrderMessageBox.qml  RoundButton.qml  SearchBar.qml  Title.qml
HomeApplican/homePage/: CreatOrder.qml  EditorOrder.qml
HomeApplican/own/: AddAddress.qml  ChangeMessage.qml  Login.qml
codes/UI/HomeApplican/: ChangeMessage.qml  HomePage.qml  Login.qml  main.qml  qml.qrc
codes/client/: client.pro
codes/client/entity/: addressinformation.cpp  merchantaccount.cpp  merchantservertype.h  user.h
codes/client/network/: networkclient.cpp
codes/server/: CMakeLists.txt  main.cpp  server.pro
codes/server/control/: accountonlinemanager.cpp  accountonlinemanager.h  accountregistermanager.cpp  createorder.cpp  ordermanagesystem.h  (+2 more)
control/order/: ordermanagesystem.cpp  ordermanagesystem.h
control/user/: accountonlinemanager.cpp  accountonlinemanager.h  accountregistermanager.cpp  accountregistermanager.h  usermanagesystem.cpp
database/: databaseconnection.cpp  databaseconnection.h  orderendrepairstatefactory.cpp  orderfactory.cpp  orderfactory.h  orderfinishedstatefactory.cpp  orderfinishedstatefactory.h  orderreceivedstatefactory.cpp  orderstartrepairstatefactory.cpp  orderstartrepairstatefactory.h  orderstateabstractfactory.h  orderstateparameters.h  orderunreceivedstatefactory.cpp  orderunreceivedstatefactory.h  queryresult.cpp  userfactory.hpp
entity/: addressinformation.h  customeraccount.cpp  customeraccount.h  merchantaccount.h  merchantservertype.cpp  user.cpp
entity/order/: evaluate.h  order.h  orderfinishedstate.cpp  orderpricerange.cpp  orderpricerange.h  orderreceivedstate.h  orderunreceivedstate.cpp
entity/user/: customeraccount.cpp  customeraccount.h  merchantaccount.cpp  merchantaccount.h  user.cpp  user.h
network/: datashunt.h  networkclient.h  networkconnection.cpp  networkconnection.h  networkserver.h
需求分析/: 愿景文档.docx  涉众分析报告.docx
需求分析/用例建模/: .~seCase.docx  UseCase.docx  UseCase.vpp  class.vpp  communicationDiagram.vpp  diagram.vpp  usecase.vpp
(+59 files in other folders)
